--- a/ED2/ensembles_modeling/predict_growth.Rmd
+++ b/ED2/ensembles_modeling/predict_growth.Rmd
@@ -336,7 +336,7 @@ specify model
 ```{r}
 rf_model <- rand_forest() %>% 
   set_mode("regression") %>% 
-  set_engine("ranger")
+  set_engine("ranger", importance = 'impurity')
 ```
 
 do workflow
@@ -388,14 +388,10 @@ save.image('~/model-vignettes/ED2/ensembles_modeling/predict_growth.Rdata')
 
 ## Predictions
 
-```{r}
-mets_mean_summer %>% summarise(range)
-```
-
 
 #### Step 1. Create a grid of met data
 
-```{r}
+```{r, eval = false}
 
 newlats <- seq(35, 40, by = 0.25)
 newlons <- seq(-105, -80, by = 0.25)
@@ -427,6 +423,12 @@ for(i in 1:length(df_batch)){
                         tmp$data)
 }
 
+```
+
+```{r}
+#getwd()
+#file.copy('../../newmets.Rdata', './newmets.Rdata')
+load('./newmets.Rdata')
 ```
 
 
@@ -558,7 +560,7 @@ p <- ggplot() +
 #                       midpoint = 1, 
 #                       breaks = c(0.3, 1, 1.2), 
 #                       limits = c(0.3, 1.2)) +
-  coord_cartesian(xlim = c(-113, -75), ylim = c(30, 45)) +
+  coord_cartesian(xlim = c(-108, -78), ylim = c(33, 42)) +
   theme_classic(base_size = 12) +
   theme(panel.background = element_rect(fill = "grey", colour = "grey"), 
         panel.grid.major = element_line(colour = "grey"),
@@ -570,26 +572,53 @@ p <- ggplot() +
 ```
 
 ```{p}
+library(ggnewscale) # free color scales for faceted plot
 
+library('RColorBrewer')
 dpredslong <- dpreds %>% 
   pivot_longer(cols = c(-lat, -lon))
-dp <- ggplot() +
+
+
+dp <- list()  
+color_scales <- c("YlOrRd", "YlOrBr", "YlGnBu")
+
+for(i in 1:length(unique(dpredslong$name))){
+dname <- unique(dpredslong$name)[i]
+df <- dpredslong %>% 
+  filter(name == dname) %>% 
+  mutate(value = 100 * value)
+dp[[dname]] <- ggplot() +
   geom_polygon(data = NA_background, 
                aes(x = long, y = lat, group = group), 
                fill = "white", color = "black") +
-  geom_raster(data = dpredslong, aes(x = lon, y = lat, fill = value), 
+  
+  geom_raster(data = df, aes(x = lon, y = lat, fill = value), 
               alpha = 0.9) +
   # scale_fill_gradient2(low = "maroon", mid = "lightblue", high = "darkblue", 
   #                      midpoint = 0, 
   #                      breaks = c(-0.1, 0, 0.1), 
   #                      limits = c(-0.1, 0.1)) +
-  coord_cartesian(xlim = c(-113, -75), ylim = c(30, 45)) +
+  scale_fill_brewer(
+    palette = color_scales[i]) +
+  coord_cartesian(xlim = c(-108, -78), ylim = c(33, 42))  +
   theme_classic(base_size = 12) +
   theme(panel.background = element_rect(fill = "grey", colour = "grey"), 
         panel.grid.major = element_line(colour = "grey"),
         panel.grid.minor = element_line(colour = "grey")) +
+  
   labs(x = "", y = "", fill = "") +
   facet_wrap(~name)
+}
 
-dp
+cowplot::plot_grid(plotlist = dp)
+```
+
+
+```{r}
+library(vip)
+library(tidymodels)
+library(dplyr)
+model_fit%>% 
+  extract_fit_parsnip() %>% 
+  vip(num_features = 20)
 ```
